--- a/manifest.json
+++ b/manifest.json
@@ -11,10 +11,13 @@
       "128": "icons/icon128.png"
     }
   },
+  "icons": {
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
+  },
   "permissions": [
-    "activeTab",
-    "scripting", 
-    "storage"
-  ],
-  "host_permissions": ["<all_urls>"]
+    "storage",
+    "activeTab"
+  ]
 }
